--- a/package.json
+++ b/package.json
@@ -1,21 +1,34 @@
 {
-  "name": "techdocs",
-  "displayName": "techDocs",
-  "description": "Tech documentation viewer",
-  "version": "0.0.1",
+  "name": "techdocs-viewer",
+  "displayName": "TechDocs Viewer",
+  "description": "View official tech documentation within VS Code",
+  "version": "1.0.0",
+  "publisher": "your-publisher-name",
   "engines": {
     "vscode": "^1.90.0"
   },
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
+  "activationEvents": [
+    "onCommand:extension.openTechDocs"
+  ],
   "main": "./extension.js",
   "contributes": {
-    "commands": [{
-      "command": "techdocs.helloWorld",
-      "title": "Hello World"
-    }]
+    "commands": [
+      {
+        "command": "extension.openTechDocs",
+        "title": "Open Tech Docs"
+      }
+    ],
+    "menus": {
+      "commandPalette": [
+        {
+          "command": "extension.openTechDocs",
+          "when": "true"
+        }
+      ]
+    }
   },
   "scripts": {
     "lint": "eslint .",
@@ -25,7 +38,7 @@
   "devDependencies": {
     "@types/vscode": "^1.90.0",
     "@types/mocha": "^10.0.6",
-    "@types/node": "18.x",
+    "@types/node": "^18.0.0",
     "eslint": "^8.57.0",
     "typescript": "^5.4.5",
     "@vscode/test-cli": "^0.0.9",
